--- a/Projects/CSS/shared.css
+++ b/Projects/CSS/shared.css
@@ -6,7 +6,7 @@
 */
 html {
     font-family: sans-serif;
-    font-size 62.5%;
+    font-size: 62.5%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
