--- a/One-Page Website/CSS/one_page_website.css
+++ b/One-Page Website/CSS/one_page_website.css
@@ -1,7 +1,142 @@
 /*
     Authour: Jalen Allison
-    evolutiontraining.com
-=
+    customsshoes.com
+
+
+*/
+
+.row > .column {
+  padding: 0 8px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Create four equal columns that floats next to eachother */
+.column {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  /* The Modal (background) */
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: white;
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    width: 60%;
+    max-width: 1200px;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: black;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  /* Hide the slides by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: red;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: red;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* Caption text */
+  .caption-container {
+    text-align: center;
+    background-color: black;
+    padding: 2px 16px;
+    color: white;
+    font-size: medium;
+  }
+  
+  img.demo {
+    opacity: 0.6;
+  }
+  
+  .active,
+  .demo:hover {
+    opacity: 1;
+  }
+  
+  img.hover-shadow {
+    transition: 0.3s;
+  }
+  
+  .hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+
+
+/*
     GENERIC STYLES
 */
 html {
@@ -9,6 +144,21 @@ html {
     font-size: 62.5%;
 }
 
+h1 {
+  text-align: left;
+}
+
+body {
+    background-color: goldenrod;
+}
+
+ul {
+    display: inline-block; text-align: left;
+    font-size: medium;
+
+
+
+}
 .container {
     padding-right: 15px;
     padding-left: 15px;
@@ -43,16 +193,24 @@ CONSULTATION STYLES
 }
 
 #consultation {
-    background-color: #f5f3f3;
+    background-color: goldenrod;
+    text-align: center;
+    padding: 30px;
 }
 
 .consultation {
     width: 60%;
+    text-align: center;
     padding: 10px;
     border-radius: 8px;
     margin: 0px auto;
     background-color: rgba(100,65,0,.3);
     box-shadow: -1px -1px 1px 0 rgba(0,0,0,0.1), 1px 2px 10px 0 rgba(0,0,0,0.5);
+}
+
+.consultation h1{
+    text-align: center;
+    font-size: medium;
 }
 
 .consultation h2 {
@@ -94,7 +252,7 @@ CONSULTATION STYLES
     border: 1px solid #808080;
     margin: 2% auto;
     border-radius: 7px;
-    background: white;
+    background: black;
     box-shadow: 2px 3px 3px 0px rgba(0, 0, 0, 0.3);
     font-family: 'Raleway', sans-serif;
 }
